--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "moment": "^2.24.0",
+    "rss-parser": "^3.7.0",
     "tailwindcss": "^0.7.4",
     "vue": "^2.6.6"
   },
